# napi_svf_tool

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  env.sh  run_napi_analysis.py
src/: CMakeLists.txt  Makefile  cmake_install.cmake  extapi.c  svf-ex.cpp
src/JsonExporter/: JsonOutput.cpp  SummaryExporter.cpp
src/SourceAndSinks/: SourceAndSinks.cpp
src/napi/: AnalyzeProperties.cpp  NapiHandler.cpp  NapiPropagationRules.cpp
src/napi/func/arrays/: NapiArrayFunction.cpp  NapiDataviewFunction.cpp  NapiElementFunctions.cpp  NapiTypedArrayFunction.cpp
src/napi/func/buffer/: NapiBufferFunction.cpp
src/napi/func/externalfuncs/: atoiFunction.cpp  callocFunction.cpp  mallocFunction.cpp  memcpyFunction.cpp  reallocFunction.cpp  strcatFunction.cpp  strcpyFunction.cpp
src/napi/func/functions/: NapiCallFunctionFunction.cpp  NapiCreateFunctionFunction.cpp  NapiGetCallBackInfo.cpp
src/napi/func/misc/: NapiCoerceFunction.cpp  NapiDateFunction.cpp  NapiGetDefinedSingletonsFunction.cpp  NapiLoadModuleWithInfoFunction.cpp
src/napi/func/numbers/: NapiCreateBigintWordsFunction.cpp  NapiCreateNumberFunction.cpp  NapiGetValueBigintWordsFunction.cpp  NapiGetValueBoolFunction.cpp  NapiGetValueNumberFunction.cpp
src/napi/func/objects/: NapiDefinePropertiesFunction.cpp  NapiGetPrototypeFunction.cpp  NapiObjectFunctions.cpp  NapiPropertyFunctions.cpp
src/napi/utils/: ParseVFG.cpp  ReadArkts.cpp
src/projectParser/: ProjectParser.cpp
src/taintanalysis/: SummaryItem.cpp  TaintList.cpp  TaintMap.cpp  TaintTracker.cpp  TaintUnit.cpp  TargetUnit.cpp
(+131 files in other folders)
